profile image avatar agregado, notebook

--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -216,6 +216,12 @@
 
 /*..chat request*/
      
+
+/*img prf tabla*/
+.igprftbl{
+  width:25px;height:25px;}
+
+
  /*tabla users chat..*/
      
 #tblusrs{
