--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -1,6 +1,6 @@
 /*style chat..*/
   
-  #dvchtrnm{
+  .dvchtrmnm{
     display:block;
       text-align:center;
     border-bottom:1px solid black;
@@ -14,14 +14,14 @@
     color:#2F4F4F;}
 
 
-#inlstroom,#insctrm{
+.inlstrms{
   width:120px;
 }
 
-
-#fmgoroom{
+.fmgorms{
   display:inline-block;
 }
+
 
    .spchtrm{
     border:1px solid black;
@@ -43,8 +43,8 @@
   display:flex;
     flex-direction:column;
   /*overflow:auto;resize:both;*/
-  position:absolute;
-    left:12%;top:20%;
+  position:absolute !important;
+    left:12%;top:10%;
   width:80%;height:60%;max-width:600px;
   border:1px solid grey;
     border-radius:5px;
