--- a/client/styles/game.css
+++ b/client/styles/game.css
@@ -4,7 +4,8 @@
   display:flex;
     flex-direction:column;
   /*overflow:auto;resize:both;*/
-  position:relative;
+  position:absolute !important;
+    top:10%;
   width:250px;height:250px;
   border:1px solid grey;
     border-radius:5px;
@@ -105,6 +106,7 @@
   display:inline-block;
     text-align:center;
   width:50px;
+  cursor:pointer;
 }
       
       dvcrtgme select{border:none;}
