--- a/client/styles/game.css
+++ b/client/styles/game.css
@@ -11,43 +11,36 @@
     border-radius:5px;
   background-color:#D2B48C;}
     
-    #dvjue div{margin:0px;}
+#dvjue_tit{
+  height:25px;}
 
-#dvjnm{
-  display:flex;
-    flex-direction:row;
-  border:1px dotted grey;
-  font-family:arial;}
-
-#dvjnmtit{
+#dvjue_titnm{
   text-align:center;
   width:100%;
-  background-color:#2E8B57;
-    color:white;}
+  border-radius:5px 0 0 0;
+  background-color:#2E8B57;/*verde aclarado*/
+    color:white;
+  cursor:move;}
 
-#dvjnmmit,#dvjnmcrr{
+#dvjue_titrsz,#dvjue_titcrr{
   text-align:center;
   width:30px;
   cursor:pointer;}
+#dvjue_titcrr{
+  border-radius:0 5px 0 0;}
 
 #dvjnmcrr{
   background-color:red;
     color:white;}    
-    
+  
+
 #sptmr{
   float:right;
   border:1px solid black;}
 
-#dvjcu{
-  display:flex;
-    flex-direction:row;
-  height:100%;}
 
-#dvjuse{
-  position:relative;
-  width:100px;height:100%;
-  border:1px solid grey;
-  }
+#dvjue_con,#dvjue_usr{border:1px solid grey;}
+
 .dvjuepnt{
   display:inline-block;
     text-align:center;
@@ -55,25 +48,11 @@
   border:1px solid;
     border-radius:50%;
 }
+
 .dvjue_u_nm{
   overflow-y:auto;
     word-wrap:break-word;
 }
-.dvjue_u_bts{
-  position:absolute;
-    bottom:0px;
-}
-
-#dvjcon{
-  overflow-y:auto;
-  width:100%;height:100%;
-  border:1px solid grey;}
-
-
-/*diccionario*/
-
-.inwrd{
-  width:120px;}
 
 
 /*style crear tipo de juego..*/
@@ -114,6 +93,7 @@
       #dvwaigme{
         display:inline-block;
       }
+
 /*style barra de juego a juntarse*/
 
 .dvgmebar{
