--- a/client/styles/game.css
+++ b/client/styles/game.css
@@ -38,8 +38,28 @@
   float:right;
   border:1px solid black;}
 
-
+#dvjue_conusr{
+	display: -webkit-flex;
+     -webkit-flex-direction:row;
+    display:flex;
+      flex-direction:row;
+    position:absolute;/*relative;*/
+      top:50px;bottom:30px;
+    width:100%;/*height:100%;*/}
+  
 #dvjue_con,#dvjue_usr{border:1px solid grey;}
+
+#dvjue_con{
+  overflow-y:auto;
+      word-wrap:break-word;
+    width:100%;}
+
+#dvjue_usr{
+  float:right;
+    word-wrap:break-word;
+  position:relative;
+  width:100px;/*height:98%*/;
+  font-weight:bold;}	
 
 .dvjuepnt{
   display:inline-block;
@@ -54,6 +74,10 @@
     word-wrap:break-word;
 }
 
+#dvjue_msg{
+	position:absolute;
+	  bottom:0px;
+	width:100%;}
 
 /*style crear tipo de juego..*/
 
