--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -359,3 +359,61 @@ th, td{
  background-color:#800000;
    color:white;}
 
+
+/*ver perfil user*/
+
+#dvprfusr{
+  position:absolute;
+    top:20%;left:20%;
+  width:60%;height:60%;
+  border:1px solid grey;
+    border-radius:5px;
+  background-color:white;}
+
+#dvprfusr_tit{
+  position:relative;
+  height:30px;
+  border-radius:5px 5px 0 0;}
+#dvprfusr_titnme{
+  text-align:center;
+  position:absolute;
+    left:0px;right:30px;
+  height:100%;
+  background-color:#ccc;
+  cursor:move;}
+#dvprfusr_titcrr{
+  text-align:center;
+  position:absolute;
+    right:0px;
+  width:30px;height:100%;
+  border:1px solid grey;
+    border-radius:0 5px 0 0;
+  cursor:pointer;}
+
+#dvprfusr_con{
+  display:flex;
+    flex-direction:column;
+    align-items:center;
+    overflow-y:auto;
+  position:absolute;
+    top:30px;bottom:30px;
+  width:100%;
+  background-color:black;
+    color:white;}
+
+#imgprfusr{
+  width:50px;height:50px;
+  border-radius:50%;
+    border:2px solid white;}
+
+
+
+#dvprfusr_chtrqs{
+  display:flex;
+    justify-content:center;
+  position:absolute;
+    bottom:0px;
+  width:100%;height:30px;
+  border-radius:0 0 5px 5px;
+  background-color:#ccc;}
+
