--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -1,14 +1,12 @@
 /*style chat..*/
   
   .dvrmsnm{
-    display:block;
-      text-align:center;
+    display:block; text-align:center;
     border-bottom:1px solid black;
     font-family:arial;
     color:#2F4F4F;}
 #dvrmsctnm{
-    display:block;
-      text-align:center;
+    display:block; text-align:center;
     border-bottom:1px solid black;
     font-family:arial;
     color:#2F4F4F;}
@@ -23,18 +21,15 @@
 }
 
 
-   .spchtrm{
-    border:1px solid black;
-      border-radius:5px;
-      /*box-shadow:5px -5px 5px grey;*/
-      margin-left:5px;
-    font-family:Tahoma, Geneva, sans-serif;
-    background-color:#2F4F4F;
-      color:white;
-    cursor:pointer;}
+.spchtrm{
+border:1px solid black; border-radius:5px;
+  /*box-shadow:5px -5px 5px grey;*/
+  margin-left:5px;
+font-family:Tahoma, Geneva, sans-serif;
+background-color:#2F4F4F; color:white;
+cursor:pointer;}
 .spchtcnt{
-  border:1px solid grey;
-    border-radius:20%;
+  border:1px solid grey; border-radius:20%;
   font-family:consolas;}
      
 .alfrente{z-index:100;}
@@ -47,70 +42,52 @@
   display:flex;
     flex-direction:column;*/
   /*overflow:auto;resize:both;*/
-  position:absolute !important;
-    left:12%;top:10%;
+  position:absolute !important; left:12%;top:10%;
   width:80%;height:60%;max-width:600px;
-  border:1px solid grey;
-    border-radius:5px;
+  border:1px solid grey; border-radius:5px;
     box-shadow:0 0 5px #444;
   background-color:white;}
 
 
- .dvchtrm_tit{
-   display: -webkit-flex;
-     -webkit-flex-direction:row;
-   display:flex;
-     flex-direction:row;
-     justify-content:center;
-   height:30px;
-   font-family:arial;}
-        
-  .dvchtrm_titnm{
-    display: -webkit-flex;
-     -webkit-flex-direction:column;
-    display:flex;
-      flex-direction:column;
-      justify-content:center;
-      text-align:center;
-    width:70%;height:100%;
-    border-radius:5px 0 0 0;
-    cursor:move;}
+.dvchtrm_tit{
+ display: -webkit-flex; -webkit-flex-direction:row;
+ display:flex; flex-direction:row; justify-content:center;
+ height:30px;
+ font-family:arial;}
+
+.dvchtrm_titnm{
+  display: -webkit-flex; -webkit-flex-direction:column;
+  display:flex; flex-direction:column; justify-content:center;
+    text-align:center;
+  width:70%;height:100%;
+  border-radius:5px 0 0 0;
+  cursor:move;}
    
 .dvchtrm_titmin,.dvchtrm_titrsz{
-   display: -webkit-flex;
-     -webkit-flex-direction:column;
-   display:flex;
-     flex-direction:column;
-     justify-content:center;
+   display: -webkit-flex; -webkit-flex-direction:column;
+   display:flex; flex-direction:column; justify-content:center;
      text-align:center;
    width:10%;height:100%;
    cursor:default;}
  
 .dvchtrm_titcrr{
-   display: -webkit-flex;
-     -webkit-flex-direction:column;
-   display:flex;
-     flex-direction:column;
-     justify-content:center;
+   display: -webkit-flex; -webkit-flex-direction:column;
+   display:flex; flex-direction:column; justify-content:center;
      text-align:center;
    width:10%;height:100%;
    border-radius:0 5px 0 0;
    cursor:default;}
 
 
-  .dvchtrm_conusr{
-    display: -webkit-flex;
-     -webkit-flex-direction:row;
-    display:flex;
-      flex-direction:row;
-    position:absolute;/*relative;*/
-      top:30px;bottom:30px;
-    width:100%;/*height:100%;*/}
-      
-  .dvchtrm_con{
-    overflow-y:auto;
-      word-wrap:break-word;
-    width:100%;/*height:98%;*/}
+.dvchtrm_conusr{
+  display: -webkit-flex; -webkit-flex-direction:row;
+  display:flex; flex-direction:row;
+  position:absolute; top:30px;bottom:30px;
+  width:100%;/*height:100%;*/}
+
+.dvchtrm_con{
+  overflow-y:auto; word-wrap:break-word;
+  width:100%;/*height:98%;*/}
 
 
 .dvchtrm_usr{
@@ -127,26 +104,22 @@
     bottom:0px;}
 
         
-  .dvchtrm_msg{
-    display: flex;
-      flex-direction: row;
-    position:absolute;
-      bottom:0px;
-    width:100%;}
+.dvchtrm_msg{
+  display: flex; flex-direction: row;
+  position:absolute; bottom:0px;
+  width:100%;}
 
 .fmchtrm_msg{
-    display: -webkit-flex;
-     -webkit-flex-direction:row;
-    display:flex;
-      flex-direction:row;
+    display: -webkit-flex; -webkit-flex-direction:row;
+    display:flex; flex-direction:row;
     width:90%;} 
 
-  .btchtrm_msg{width:40px;} 
-  .btchtrm_emj{
-    width:40px;
-    margin-right:20px;}
-    
-  .inchtrm_msg{width:100%;}
+.btchtrm_msg{width:40px;} 
+.btchtrm_emj{
+  width:40px;
+  margin-right:20px;}
+
+.inchtrm_msg{width:100%;}
 
 .dvemj{
   position: absolute;
@@ -175,8 +148,7 @@
 
 /*typing*/
 .dvtyp{
-  position:absolute;
-    top:0px;
+  position:absolute; top:0px;
   width:70%;/*height:20%;*/
   background-color:white;}
 .sptyp{
@@ -211,8 +183,7 @@
      
 #tblusrs{
   width:100%;
-  border-collapse:collapse;
-    border-radius:5px;
+  border-collapse:collapse; border-radius:5px;
   background-color:#34495E}
   
 
@@ -222,8 +193,7 @@ caption{
  color:#34495E;}
  
 th{
-  font-family:arial;
-    font-weight:bold;
+  font-family:arial; font-weight:bold;
   color:#dd5;}
   
 tbody>tr{/*:not(:first-child)*/
@@ -241,25 +211,21 @@ th, td{
 /*style inf user cht rqs..*/
 
 #dvinfusr{
-    display:inline-flex;
-      flex-direction:row;
+    display:inline-flex; flex-direction:row;
     border:1px solid grey;}
         
- #dvinfusr>div{
-     border:1px dashed grey;
-       padding-right:5px;}
+#dvinfusr>div{
+   border:1px dashed grey;
+     padding-right:5px;}
           
-    #dvcrrprfcht{
-	  display: -webkit-flex;
-        -webkit-flex-direction:column;
-      display:flex;
-        flex-direction:column;
-        justify-content:center;
-      padding:5px;}
-      
-    #dvcrrprfcht:hover{
-    background-color:grey;
-      cursor:pointer;}
+#dvcrrprfcht{
+display: -webkit-flex; -webkit-flex-direction:column;
+  display:flex; flex-direction:column; justify-content:center;
+  padding:5px;}
+
+#dvcrrprfcht:hover{
+background-color:grey;
+  cursor:pointer;}
     
 #dvinfprfcht{
   background-color:#f5f5f5;}
@@ -271,72 +237,61 @@ th, td{
 /*waiting section chtrqs..*/
 
 .dvwti{
-  display: -webkit-flex;
-     -webkit-flex-direction:row;
-  display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-  position:absolute;
-    bottom:0px;
+  display: -webkit-flex; -webkit-flex-direction:row;
+  display:flex; flex-direction:row; justify-content:space-evenly;
+  position:absolute; bottom:0px;
   width:200px;
   border:1px solid grey;
     border-radius:5px;}
 
-    .dvwti>div{
-      border:1px solid grey;
-        border-radius:5px;}
+.dvwti>div{
+  border:1px solid grey;
+    border-radius:5px;}
 
-    #dvwti_t{
-      text-align:center;
-      width:90%;
-      background-color:#2e8b57;
-        color:white;}
-    #dvwti_x{
-      text-align:center;
-      width:10%;
-      background-color:#800000;
-        color:white;}
+#dvwti_t{
+  text-align:center;
+  width:90%;
+  background-color:#2e8b57;
+    color:white;}
+#dvwti_x{
+  text-align:center;
+  width:10%;
+  background-color:#800000;
+    color:white;}
 
 /*receiving chat request..*/
 
 .dvchtrqsof{
-  display: -webkit-flex;
-     -webkit-flex-direction:row;
-  display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-  position:absolute;
-    top:0px;
+  display: -webkit-flex; -webkit-flex-direction:row;
+  display:flex; flex-direction:row; justify-content:space-evenly;
+  position:absolute; top:0px;
   width:200px;
   border:1px solid grey;
     border-radius:5px;}
 
-    .dvchtrqsof>div{
-      border:1px solid grey;
-        border-radius:5px;}
-    #dvchtrqsof_t{
-      text-align:center;
-      width:80%;
-      background-color:#2e8b57;
-        color:white;}
-    #dvchtrqsof_m{
-      text-align:center;
-      width:10%;}
-    #dvchtrqsof_x{
-      text-align:center;
-      width:10%;
-      background-color:#800000;
-        color:white;}
+.dvchtrqsof>div{
+  border:1px solid grey;
+    border-radius:5px;}
+#dvchtrqsof_t{
+  text-align:center;
+  width:80%;
+  background-color:#2e8b57;
+    color:white;}
+#dvchtrqsof_m{
+  text-align:center;
+  width:10%;}
+#dvchtrqsof_x{
+  text-align:center;
+  width:10%;
+  background-color:#800000;
+    color:white;}
 
 /*call*/
 
 .dvrcbcll,.dvespcll{
-  display: -webkit-flex;
-     -webkit-flex-direction:row;
-  display:flex;
-    flex-direction:row;
-  position:absolute;
-    top:10%;
+  display: -webkit-flex; -webkit-flex-direction:row;
+  display:flex; flex-direction:row;
+  position:absolute; top:10%;
   width:100%;
   background-color:white;
     color:grey;
@@ -348,8 +303,7 @@ th, td{
 .dvrcbcllmas,.dvrcbcllcrr,.dvespcllcrr{
   text-align:center;
   width:10%;
-  border:1px solid;
-    border-radius:5%;
+  border:1px solid; border-radius:5%;
     margin-left:5px;
 }
 .dvrcbcllmas{
@@ -363,11 +317,9 @@ th, td{
 /*ver perfil user*/
 
 #dvprfusr{
-  position:absolute;
-    top:20%;left:20%;
+  position:absolute; top:20%;left:20%;
   width:60%;height:60%;
-  border:1px solid grey;
-    border-radius:5px;
+  border:1px solid grey; border-radius:5px; 
   background-color:white;}
 
 #dvprfusr_tit{
@@ -376,27 +328,21 @@ th, td{
   border-radius:5px 5px 0 0;}
 #dvprfusr_titnme{
   text-align:center;
-  position:absolute;
-    left:0px;right:30px;
+  position:absolute; left:0px;right:30px;
   height:100%;
   background-color:#ccc;
   cursor:move;}
 #dvprfusr_titcrr{
   text-align:center;
-  position:absolute;
-    right:0px;
+  position:absolute; right:0px;
   width:30px;height:100%;
-  border:1px solid grey;
-    border-radius:0 5px 0 0;
+  border:1px solid grey; border-radius:0 5px 0 0;
   cursor:pointer;}
 
 #dvprfusr_con{
-  display:flex;
-    flex-direction:column;
-    align-items:center;
+  display:flex; flex-direction:column; align-items:center;
     overflow-y:auto;
-  position:absolute;
-    top:30px;bottom:30px;
+  position:absolute; top:30px;bottom:30px;
   width:100%;
   background-color:black;
     color:white;}
@@ -409,10 +355,8 @@ th, td{
 
 
 #dvprfusr_chtrqs{
-  display:flex;
-    justify-content:center;
-  position:absolute;
-    bottom:0px;
+  display:flex; justify-content:center;
+  position:absolute; bottom:0px;
   width:100%;height:30px;
   border-radius:0 0 5px 5px;
   background-color:#ccc;}
