--- a/client/styles/reporte.css
+++ b/client/styles/reporte.css
@@ -1,42 +1,42 @@
-/* fecha: 16-09-18 */
+/* fecha: 16-09-18, 19-09 */
 
-#dvrptscr{
+#dvreportescr{
   display:flex; justify-content:center; align-items:center;
   position:absolute; top:0;
   width:100%;height:100%;
   background:rgba(0,0,0,0.7);
 }
-#dvrpt{
+#dvreporte{
   width:50%;height:50%;
   /*border:1px dotted;*/}
 
-#dvrpttit{
+#dvreportetit{
   display:flex; justify-content:center;
   position:relative;
 }
-#dvrpttit>div{
+#dvreportetit>div{
   display:inline-block;
 }
 
-#dvrpttitnm{
+#dvreportetitnm{
   text-align:center;
   width:100%;
   background:black; color:yellow;
 }
-#dvrpttitx{
+#dvreportetitx{
   text-align:center;
   position:absolute; right:0px;
   width:50px;
   background:white;
   cursor:pointer;
 }
-#inrpttit{
+#inreportetit{
   text-align:center;
   width:100%;
 }
-#tarpt{
+#tareporte{
   width:100%;height:50%;
 }
-#btsndrpt{
+#btsndreporte{
   width:100%;
 }
